@@ -151,6 +151,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\libcsystem\libcsystem_error.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcsystem\libcsystem_getopt.c"
 				>
 			</File>
@@ -178,6 +182,14 @@
 			>
 			<File
 				RelativePath="..\..\libcsystem\libcsystem_definitions.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcsystem\libcsystem_error.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcsystem\libcsystem_extern.h"
 				>
 			</File>
 			<File
@@ -221,6 +233,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libcsystem\libcsystem_libcstring.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcsystem\libcsystem_libuna.h"
 				>
 			</File>
@@ -234,6 +250,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libcsystem\libcsystem_support.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcsystem\libcsystem_types.h"
 				>
 			</File>
 			<File
