@@ -151,6 +151,22 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\libfdata\libfdata_btree.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdata\libfdata_btree_node.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdata\libfdata_btree_range.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdata\libfdata_cache.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libfdata\libfdata_error.c"
 				>
 			</File>
@@ -204,6 +220,22 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\libfdata\libfdata_btree.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdata\libfdata_btree_node.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdata\libfdata_btree_range.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfdata\libfdata_cache.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\libfdata\libfdata_definitions.h"
 				>
